--- a/dansFolder/protoTypePage1.html
+++ b/dansFolder/protoTypePage1.html
@@ -1,5 +1,28 @@
-<div>
-    <h1>Page1</h1>
+<div class="age-range">
+    <h1>Age Range</h1>
+    <div>
+        <p>{{user_age}}</p>
+        <!--Add an ng-click attr that calls a function which
+         captures the value and displays the text to the user.
+         Also, this function should store the value to pass on.-->
 
-    <p>{{message}}</p>
+        <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
+        <button value="25">25-35</button>
+        <button value="35">35-45</button>
+        <button value="45">45-55</button>
+        <button value="55">55 up</button>
+    </div>
+    <div>
+        <p></p>
+    </div>
+    <div>
+        <p>{{match_age}}</p>
+        <button value="25">25-35</button>
+        <button value="35">35-45</button>
+        <button value="45">45-55</button>
+        <button value="55">55 up</button>
+    </div>
+    <div>
+        <p></p>
+    </div>
 </div>
