--- a/proto_user_page.html
+++ b/proto_user_page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="protoLoginApp">
+<html lang="en" ng-app="protoUserApp">
 <head>
     <meta charset="UTF-8">
-    <title>DoubleDate Proto Login Page</title>
+    <title>DoubleDate Proto User Page</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script data-require="angularjs@1.3.6" data-semver="1.3.6" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular.js"></script>
-    <script src="proto_login_script.js"></script>
-    <script src="login_service.js"></script>
-    <script src="proto_login_controller.js"></script>
+    <script src="proto_user_script.js"></script>
+    <script src="user_service.js"></script>
+    <script src="proto_user_controller.js"></script>
     <style>
         td {
             border: 1px solid gray;
@@ -15,53 +15,53 @@
     </style>
 </head>
 <body>
-<div ng-controller="loginController as lc">
-    <h3>Current Login Status:</h3>
+<div ng-controller="protoUserController as uc">
+    <h3>Current User Status:</h3>
     <table>
         <tr>
             <td>Logged in:</td>
-            <td>{{lc.loginStatus.loggedIn}}</td>
+            <td>{{uc.userStatus.loggedIn}}</td>
         </tr>
         <tr>
             <td>Username:</td>
-            <td>{{lc.loginStatus.username}}</td>
+            <td>{{uc.userStatus.username}}</td>
         </tr>
         <tr>
             <td>Name:</td>
-            <td>{{lc.loginStatus.name}}</td>
+            <td>{{uc.userStatus.name}}</td>
         </tr>
         <tr>
             <td>User Level:</td>
-            <td>{{lc.loginStatus.userLevel}}</td>
+            <td>{{uc.userStatus.userLevel}}</td>
         </tr>
     </table>
     <hr>
     <h3>Please log in:</h3>
     <form>
         <label for="username">Username:</label>
-        <input type="text" id="username" ng-model="lc.username">
+        <input type="text" id="username" ng-model="uc.username">
         <br>
         <label for="password">Password:</label>
-        <input type="text" id="password" ng-model="lc.password">
+        <input type="text" id="password" ng-model="uc.password">
         <br>
         <br>
     </form>
-    <button id="log-in-button" ng-click="lc.onLogInButton()">Log In</button>
+    <button id="log-in-button" ng-click="uc.onLogInButton()">Log In</button>
     <hr>
     <h4>Login Results:</h4>
-    <div>{{lc.loginResults}}</div>
+    <div>{{uc.loginResults}}</div>
     <hr>
     <h3>Check Login Status:</h3>
-    <button id="check-status-button" ng-click="lc.onCheckStatusButton()">Check Status</button>
+    <button id="check-status-button" ng-click="uc.onCheckStatusButton()">Check Status</button>
     <hr>
     <h4>Status Results:</h4>
-    <div>{{lc.checkStatusResults}}</div>
+    <div>{{uc.checkStatusResults}}</div>
     <hr>
     <h3>Log out when you are finished:</h3>
-    <button id="log-out-button" ng-click="lc.onLogOutButton()">Log Out</button>
+    <button id="log-out-button" ng-click="uc.onLogOutButton()">Log Out</button>
     <hr>
     <h4>Logout Results:</h4>
-    <div>{{lc.logoutResults}}</div>
+    <div>{{uc.logoutResults}}</div>
 </div>
 </body>
 </html>
