Here are the three pages, more or less complete, not appearance wise orin the correct order, or functionaly

--- a/dansFolder/index.html
+++ b/dansFolder/index.html
@@ -23,9 +23,8 @@
             <ul class="main-nav">
                 <li><a href="#/">Page1</a></li>
                 <li><a href="#page2">Page2</a></li>
+                <li><a href="#page3">Page3</a></li>
                 <li><a href="login.hmtl">Login</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="help.html">Help</a></li>
             </ul>
           </nav>
       </header>
