--- a/dansFolder/protoTypePage1.html
+++ b/dansFolder/protoTypePage1.html
@@ -7,20 +7,22 @@
          Also, this function should store the value to pass on.-->
 
         <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
-        <button value="25">25-35</button>
-        <button value="35">35-45</button>
-        <button value="45">45-55</button>
-        <button value="55">55 up</button>
+        <button value="18">18-25</button>
+        <button value="26">26-35</button>
+        <button value="36">36-50</button>
+        <button value="50">50-60</button>
+        <button value="55">65+</button>
     </div>
     <div>
         <p></p>
     </div>
     <div>
         <p>{{match_age}}</p>
-        <button value="25">25-35</button>
-        <button value="35">35-45</button>
-        <button value="45">45-55</button>
-        <button value="55">55 up</button>
+        <button value="18">18-25</button>
+        <button value="26">26-35</button>
+        <button value="36">36-50</button>
+        <button value="50">50-60</button>
+        <button value="55">65+</button>
     </div>
     <div>
         <p></p>
