--- a/dansFolder/protoTypePage2.html
+++ b/dansFolder/protoTypePage2.html
@@ -1,5 +1,11 @@
-<div>
-    <h1>Page2</h1>
+<div class="location">
+    <h1>Location</h1>
+    <div class="match_locale">
+       <p>{{match_location}}</p>
+        <button value="south-orange-county">South Orange County</button>
+        <button value="central-orange-county">Central Orange County</button>
+        <button value="north-orange-county">Central Orange County</button>
+    </div>
+    <p>Great! You're looking for couples in <span></span></p>
 
-    <p>{{message}}</p>
 </div>
