Added the previous and next buttons

--- a/dansFolder/protoTypePage1.html
+++ b/dansFolder/protoTypePage1.html
@@ -1,6 +1,6 @@
 <div class="age-range">
     <h1>Age Range</h1>
-    <div>
+    <div class="age-range-buttons">
         <p>{{user_age}}</p>
         <!--Add an ng-click attr that calls a function which
          captures the value and displays the text to the user.
@@ -16,7 +16,7 @@
     <div>
         <p></p>
     </div>
-    <div>
+    <div class="age-range-buttons">
         <p>{{match_age}}</p>
         <button value="18">18-25</button>
         <button value="26">26-35</button>
@@ -26,5 +26,8 @@
     </div>
     <div>
         <p></p>
+    </div>
+    <div class="previous-next">
+        <a href="#/page2"><button>Next</button></a>
     </div>
 </div>
