--- a/dansFolder/protoTypePage2.html
+++ b/dansFolder/protoTypePage2.html
@@ -1,11 +1,14 @@
 <div class="location">
     <h1>Location</h1>
-    <div class="match_locale">
+    <div class="match-locale">
        <p>{{match_location}}</p>
         <button value="south-orange-county">South Orange County</button>
         <button value="central-orange-county">Central Orange County</button>
         <button value="north-orange-county">Central Orange County</button>
     </div>
     <p>Great! You're looking for couples in <span></span></p>
-
+    <div class="previous-next">
+        <a href="#/"><button>Previous</button></a>
+        <a href="#/page3"><button>Next</button></a>
+    </div>
 </div>
