Three views now have the correct order and added the meta tag for viewports

--- a/dansFolder/index.html
+++ b/dansFolder/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="doubleDateApp">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prototype</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
