--- a/dansFolder/protoTypePage1.html
+++ b/dansFolder/protoTypePage1.html
@@ -1,33 +1,20 @@
-<div class="age-range">
-    <h1>Age Range</h1>
-    <div class="age-range-buttons">
-        <p>{{user_age}}</p>
-        <!--Add an ng-click attr that calls a function which
-         captures the value and displays the text to the user.
-         Also, this function should store the value to pass on.-->
-
-        <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
-        <button value="18">18-25</button>
-        <button value="26">26-35</button>
-        <button value="36">36-50</button>
-        <button value="50">50-60</button>
-        <button value="55">65+</button>
+<div class="location">
+    <h1>Location</h1>
+    <div class="match-locale">
+        <p>{{match_location}}</p>
+        <button value="south-orange-county">South Orange County</button>
+        <button value="central-orange-county">Central Orange County</button>
+        <button value="north-orange-county">Central Orange County</button>
     </div>
-    <div>
-        <p></p>
-    </div>
-    <div class="age-range-buttons">
-        <p>{{match_age}}</p>
-        <button value="18">18-25</button>
-        <button value="26">26-35</button>
-        <button value="36">36-50</button>
-        <button value="50">50-60</button>
-        <button value="55">65+</button>
-    </div>
-    <div>
-        <p></p>
-    </div>
+    <p>Great! You're looking for couples in <span></span></p>
     <div class="previous-next">
         <a href="#/page2"><button>Next</button></a>
     </div>
+
 </div>
+
+
+
+
+
+
