--- a/welcome.html
+++ b/welcome.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="doubleDateApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
+    <script src="routing.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="welcome_body">
+<body class="welcome_body" ng-controller="routeController">
+<div ng-view> </div>
+
+
 <div class="col-xs-11.5 col-xs-offset-0.5">
     as a couple you're looking to expand your circle of friends.<br>so are the other people here.<br>
     <div class="col-xs-offset-2">
-    <button type="button" class="btn btn-default welcome_button">I'm new</button>
+    <a href="#pages/location.html"> </a><button type="button" class="btn btn-default welcome_button">I'm new</button>
     <button type="button" class="btn btn-default welcome_button">I've been here before</button>
     </div>
-
-
 </div>
 </body>
 </html>
