add routing js file and pages sub folder'

--- a/pages/age_range.html
+++ b/pages/age_range.html
@@ -28,7 +28,7 @@
         <p></p>
     </div>
     <div class="previous-next">
-        <a href="#/"><button>Previous</button></a>
-        <a href="#/page3"><button>Next</button></a>
+        <a href="#/location"><button>Previous</button></a>
+        <a href="#/interests"><button>Next</button></a>
     </div>
 </div>
