--- a/pages/location.html
+++ b/pages/location.html
@@ -8,7 +8,7 @@
     </div>
     <p>Great! You're looking for couples in <span></span></p>
     <div class="previous-next">
-        <a href="#/page2"><button>Next</button></a>
+        <a href="#/age_range"><button>Next</button></a>
     </div>
 </div>
 
