--- a/welcome.html
+++ b/welcome.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="welcome_body" ng-controller="routeController">
-<div ng-view> </div>
 
+<div ng-view>
+</div>
 
 </body>
 </html>
