Interim checkin for travel.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -92,10 +92,129 @@
             <td><input type="number" ng-model="pc.currentProfile.theirAgeMax"></td>
         </tr>
         <tr>
+            <td>Board Games:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.boardGames"></td>
+        </tr>
+        <tr>
+            <td>Card Games:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.cardGames"></td>
+        </tr>
+        <tr>
+            <td>Cooking:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.cooking"></td>
+        </tr>
+        <tr>
+            <td>Conversation:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.conversation"></td>
+        </tr>
+        <tr>
+            <td>Art Galleries:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.artGalleries"></td>
+        </tr>
+        <tr>
+            <td>Comedy:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.comedy"></td>
+        </tr>
+        <tr>
+            <td>Classical Concerts:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.classicalConcerts"></td>
+        </tr>
+        <tr>
+            <td>Popular Concerts:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.popularConcerts"></td>
+        </tr>
+        <tr>
+            <td>Ballroom Dancing:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.ballroomDancing"></td>
+        </tr>
+        <tr>
+            <td>Country Dancing:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.countryDancing"></td>
+        </tr>
+        <tr>
+            <td>Salsa Dancing:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.salsaDancing"></td>
+        </tr>
+        <tr>
+            <td>Casual Dining:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.casualDining"></td>
+        </tr>
+        <tr>
+            <td>Fine Dining:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.fineDining"></td>
+        </tr>
+        <tr>
+            <td>Karaoke:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.karaoke"></td>
+        </tr>
+        <tr>
+            <td>Live Theater:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.liveTheater"></td>
+        </tr>
+        <tr>
+            <td>Movies:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.movies"></td>
+        </tr>
+        <tr>
+            <td>Wine Tasting:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.wineTasting"></td>
+        </tr>
+        <tr>
             <td>Bicycling:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.bicycling"></td>
         </tr>
-
+        <tr>
+            <td>Bowling:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.bowling"></td>
+        </tr>
+        <tr>
+            <td>Golf:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.golf"></td>
+        </tr>
+        <tr>
+            <td>Hiking:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.hiking"></td>
+        </tr>
+        <tr>
+            <td>Horseback Riding:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.horsebackRiding"></td>
+        </tr>
+        <tr>
+            <td>Kayaking:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.kayaking"></td>
+        </tr>
+        <tr>
+            <td>Motorcycling:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.motorcycling"></td>
+        </tr>
+        <tr>
+            <td>Racquetball:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.racquetball"></td>
+        </tr>
+        <tr>
+            <td>Tennis:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.tennis"></td>
+        </tr>
+        <tr>
+            <td>Walking:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.walking"></td>
+        </tr>
+        <tr>
+            <td>Camping:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.camping"></td>
+        </tr>
+        <tr>
+            <td>RVing:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.rving"></td>
+        </tr>
+        <tr>
+            <td>Domestic Travel:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.domesticTravel"></td>
+        </tr>
+        <tr>
+            <td>Foreign Travel:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.foreignTravel"></td>
+        </tr>
     </table>
 </div>
 </body>
