Basic profile with all interests is now working.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -70,6 +70,7 @@
         <tr>
             <td>Zip Code:</td>
             <td><input type="number" ng-model="pc.currentProfile.zipCode"></td>
+            <td>Location Page</td>
         </tr>
         <tr>
             <td>Distance Max:</td>
@@ -78,6 +79,7 @@
         <tr>
             <td>Our Age Min:</td>
             <td><input type="number" ng-model="pc.currentProfile.ourAgeMin"></td>
+            <td>Age Range Page</td>
         </tr>
         <tr>
             <td>Our Age Max:</td>
@@ -94,6 +96,7 @@
         <tr>
             <td>Board Games:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.boardGames"></td>
+            <td>At Home Interests</td>
         </tr>
         <tr>
             <td>Card Games:</td>
@@ -110,6 +113,7 @@
         <tr>
             <td>Art Galleries:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.artGalleries"></td>
+            <td>Out and About Interests</td>
         </tr>
         <tr>
             <td>Comedy:</td>
@@ -162,6 +166,7 @@
         <tr>
             <td>Bicycling:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.bicycling"></td>
+            <td>Sporting Interests</td>
         </tr>
         <tr>
             <td>Bowling:</td>
@@ -202,6 +207,7 @@
         <tr>
             <td>Camping:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.camping"></td>
+            <td>Travel Interests</td>
         </tr>
         <tr>
             <td>RVing:</td>
