beginning get started pages styling

--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -4,6 +4,29 @@
      captures the value and displays the text to the user.
      Also, this function should store the value to pass on.-->
 
+
+    <!--<div data-role="page">-->
+        <!--<div data-role="header">-->
+            <!--<h1>Range Slider</h1>-->
+        <!--</div>-->
+
+        <!--<div data-role="main" class="ui-content">-->
+            <!--<form method="post" action="demoform.asp">-->
+                <!--<div data-role="rangeslider">-->
+                    <!--<label for="price-min">Price:</label>-->
+                    <!--<input type="range" name="price-min" id="price-min" value="200" min="0" max="1000">-->
+                    <!--<label for="price-max">Price:</label>-->
+                    <!--<input type="range" name="price-max" id="price-max" value="800" min="0" max="1000">-->
+                <!--</div>-->
+                <!--<input type="submit" data-inline="true" value="Submit">-->
+            <!--</form>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--http://www.w3schools.com/jquerymobile/tryit.asp?filename=tryjqmob_forms_slider_range-->
+
+
+
     <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
     <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">18-25</button>
     <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">26-35</button>
