Add zipcodes table; store city, latitude, longitude in profiles table.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -69,8 +69,20 @@
         </tr>
         <tr>
             <td>Zip Code:</td>
-            <td><input type="number" ng-model="pc.currentProfile.zipCode"></td>
+            <td><input type="number" ng-model="pc.currentProfile.zipcode"></td>
             <td>Location Page</td>
+        </tr>
+        <tr>
+            <td>City:</td>
+            <td>{{pc.currentProfile.city}}</td>
+        </tr>
+        <tr>
+            <td>Longitude:</td>
+            <td>{{pc.currentProfile.longitude}}</td>
+        </tr>
+        <tr>
+            <td>Latitude:</td>
+            <td>{{pc.currentProfile.latitude}}</td>
         </tr>
         <tr>
             <td>Distance Max:</td>
