added at home interests

--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -2,7 +2,7 @@
 
 congratulations! you currently have __ matches.
 to unlock your matches, enter below:<br>
-<input type="text" placeholder="e-mail address">
+<input type="text" placeholder="e-mail address" class="input_text">
 
 <div class="previous-next">
     <a href="#/interests_travel">
