--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -10,18 +10,18 @@
             <!--<h1>Range Slider</h1>-->
         <!--</div>-->
 
-        <!--<div data-role="main" class="ui-content">-->
-            <!--<form method="post" action="demoform.asp">-->
-                <!--<div data-role="rangeslider">-->
+        <div data-role="main" class="ui-content">
+            <form method="post" action="demoform.asp">
+                <div data-role="rangeslider">
                     <!--<label for="price-min">Price:</label>-->
-                    <!--<input type="range" name="price-min" id="price-min" value="200" min="0" max="1000">-->
+                    <input type="range" name="price-min" id="price-min" value="200" min="0" max="1000">
                     <!--<label for="price-max">Price:</label>-->
-                    <!--<input type="range" name="price-max" id="price-max" value="800" min="0" max="1000">-->
-                <!--</div>-->
+                    <input type="range" name="price-max" id="price-max" value="800" min="0" max="1000">
+                </div>
                 <!--<input type="submit" data-inline="true" value="Submit">-->
-            <!--</form>-->
-        <!--</div>-->
-    <!--</div>-->
+            </form>
+        </div>
+    </div>
 
     <!--http://www.w3schools.com/jquerymobile/tryit.asp?filename=tryjqmob_forms_slider_range-->
 
