--- a/pages/user_location.html
+++ b/pages/user_location.html
@@ -1,7 +1,7 @@
 <div class="location">
     <div class="match-locale">
         <p>{{match_location}}</p>
-        <input type="number" placeholder="zip code">
+        <input type="number" placeholder="zip code" class="input_text">
         <button type="button" class="btn btn-default">use my current location</button>
 
         <a href="#/welcome">
