finalize user interests

--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -2,14 +2,13 @@
 
 <div class="interest-checkboxes">
     <div class="at-home groupings">
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">book club</button>
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">conversation (e.g. around the fire pit)</button>
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">cooking</button>
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">crafts</button>
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">movie night</button>
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">playing board games</button>
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">playing card games</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">puzzles</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">painting</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">book club</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">watching movies</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">conversation (e.g. around the fire pit)</button>
     </div>
 </div>
 
