--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -1,16 +1,17 @@
-when outdoors we like
+to stay active we like
 <div class="outdoors-about groupings">
     <div class="interest-buttons">
-        <div class="at-home groupings">
+        <div class="outdoor groupings">
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">bicycling</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">bowling</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">golfing</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">hiking</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">horse-back-riding</button>
+            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">horseback-riding</button>
+            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">kayaking/paddleboarding</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">motorcycling</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">racquetball</button>
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">tennis</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">theater shows</button>                     <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">movies</button>
+            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">walking</button>
         </div>
     </div>
 </div>
