Final interests list.

--- a/proto_profile_page.html
+++ b/proto_profile_page.html
@@ -119,6 +119,18 @@
             <td><input type="checkbox" ng-model="pc.currentProfile.cooking"></td>
         </tr>
         <tr>
+            <td>Crafts:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.crafts"></td>
+        </tr>
+        <tr>
+            <td>Book Club:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.bookClub"></td>
+        </tr>
+        <tr>
+            <td>Movie Night:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.movieNight"></td>
+        </tr>
+        <tr>
             <td>Conversation:</td>
             <td><input type="checkbox" ng-model="pc.currentProfile.conversation"></td>
         </tr>
@@ -230,8 +242,8 @@
             <td><input type="checkbox" ng-model="pc.currentProfile.domesticTravel"></td>
         </tr>
         <tr>
-            <td>Foreign Travel:</td>
-            <td><input type="checkbox" ng-model="pc.currentProfile.foreignTravel"></td>
+            <td>Travel Abroad:</td>
+            <td><input type="checkbox" ng-model="pc.currentProfile.travelAbroad"></td>
         </tr>
     </table>
 </div>
