fixed buttons on initial pages

--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -2,18 +2,18 @@
 
 <div class="interest-checkboxes">
     <div class="at-home groupings">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">book club</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">conversation (e.g. around the fire pit)</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">cooking</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">crafts</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">movie night</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">playing board games</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">playing card games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">book club</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">conversation (e.g. around the fire pit)</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">cooking</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">crafts</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">movie night</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">playing board games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">playing card games</button>
     </div>
 </div>
 
 
-<div class="previous-next">
+<div class="previous-next pull-right">
     <a href="#/age_range">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
