--- a/pages/interests_outdoors.html
+++ b/pages/interests_outdoors.html
@@ -2,21 +2,21 @@ to stay active we like
 <div class="outdoors-about groupings">
     <div class="interest-buttons">
         <div class="outdoor groupings">
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">bicycling</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">bowling</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">golfing</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">hiking</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">horseback-riding</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">kayaking/paddleboarding</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">motorcycling</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">racquetball</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">tennis</button>
-            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">walking</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">bicycling</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">bowling</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">golfing</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">hiking</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">horseback-riding</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">kayaking/paddleboarding</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">motorcycling</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">racquetball</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">tennis</button>
+            <button type="button" class="btn btn-default" aria-label="Left Align">walking</button>
         </div>
     </div>
 </div>
 
-<div class="previous-next">
+<div class="previous-next pull-right">
     <a href="#/interests_out">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
