--- a/pages/location.html
+++ b/pages/location.html
@@ -17,7 +17,7 @@
 <!--<button type="button" class="btn btn-default chevronButton" aria-label="Left Align">20-->
 <!--</button>-->
 
-<div class="previous-next">
+<div class="previous-next pull-right">
     <a href="#/user_location">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
