--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -4,14 +4,16 @@ congratulations! you currently have __ matches.
 to unlock your matches, enter below:<br>
 <input type="text" placeholder="e-mail address" class="input_text">
 
-<div class="previous-next">
-    <a href="#/interests_travel">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        </button>
-    </a>
+<div class="previous-next pull-right">
+
+    <!--<a href="#/interests_travel">-->
+        <!--<button type="button" class="btn btn-default chevronButton signup-previous" aria-label="Left Align">-->
+            <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+        <!--</button>-->
+    <!--</a>-->
+
     <a href="#/matches">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
+        <button type="button" class="btn btn-default signup-button" aria-label="Left Align">
             show us our matches
         </button>
     </a>
