--- a/pages/user_location.html
+++ b/pages/user_location.html
@@ -2,8 +2,9 @@
     <div class="match-locale">
         <p>{{match_location}}</p>
         <input type="number" placeholder="zip code" class="input_text">
-        <button type="button" class="btn btn-default">use my current location</button>
+        <button type="button" class="btn btn-default btn-block current-location">use my current location</button>
 
+    <div class="previous-next pull-right">
         <a href="#/welcome">
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -16,6 +17,7 @@
         </a>
     </div>
 </div>
+
 
 
 
