--- a/pages/age_range.html
+++ b/pages/age_range.html
@@ -3,14 +3,14 @@
 
     <div class="age-range-buttons">
         <p>{{match_age}}</p>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">18-25</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">26-35</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">36-50</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">51-60</button>
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">60+</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">18-25</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">26-35</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">36-50</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">51-60</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align">60+</button>
     </div>
 
-    <div class="previous-next">
+    <div class="previous-next pull-right">
         <a href="#/user_age_range">
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
