--- a/pages/user_age_range.html
+++ b/pages/user_age_range.html
@@ -28,13 +28,13 @@
 
 
     <!--Later on, maybe store text and values in an array or object and make a loop to create the buttons-->
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">18-25</button>
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">26-35</button>
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">36-50</button>
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">51-60</button>
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">60+</button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">18-25</button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">26-35</button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">36-50</button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">51-60</button>
+    <button type="button" class="btn btn-default" aria-label="Left Align">60+</button>
 </div>
-<div class="previous-next">
+<div class="previous-next pull-right">
     <a href="#/location">
         <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
