--- a/proto_match.html
+++ b/proto_match.html
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div class="match_buttons">
-        <button type="button" class="btn btn-lg btn_match"><span class="glyphicon glyphicon-thumbs-down"></span></button>
-        <button type="button" class="btn btn-lg btn_match"><span class="glyphicon glyphicon-thumbs-up"></span></button>
+        <button type="button" class="btn btn_match"><span class="glyphicon glyphicon-thumbs-down"></span></button>
+        <button type="button" class="btn btn_match"><span class="glyphicon glyphicon-thumbs-up"></span></button>
     </div>
 </div>
 </body>
