--- a/dansFolder/proto_page_3.html
+++ b/dansFolder/proto_page_3.html
@@ -6,7 +6,7 @@
         <div class="at-home groupings">
             <h3>When at Home</h3>
             <div class="form-group">
-                <input type="checkbox" id="cooking"/>
+                <input type="checkbox" id="cooking" ng-init="cooking" ng-model="cooking"/>
                 <label for="cooking">Cooking</label>
             </div>
             <div class="form-group">
@@ -140,8 +140,15 @@
             </div>
         </div>
     </div>
-
+    <div class="interests-selected">
+        <ul>
+            <li>{{ cooking }}</li>
+        </ul>
+    </div>
     <div class="previous-next">
        <a href="#/page2"><button>Previous</button></a>
+    </div>
+    <div class="submit-button">
+        <button type="button">Search for Matches</button>
     </div>
 </div>
