--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -2,13 +2,23 @@
 
 <div class="interest-checkboxes">
     <div class="at-home groupings">
-        <button type="button" class="btn btn-default" aria-label="Left Align">book club</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">conversation (e.g. around the fire pit)</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">cooking</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">crafts</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">movie night</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">playing board games</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align">playing card games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align"
+                ng-click="IHC.toggleInterest('book-club');"
+                ng-class="{selectedButton: IHC.checkInterest('book-club')}">book
+            club</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('conversation');"
+                ng-class="{selectedButton: IHC.checkInterest('conversation')}">conversation (e.g. around the fire 
+            pit)</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('cooking');"
+                ng-class="{selectedButton: IHC.checkInterest('cooking')}">cooking</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('crafts');"
+                ng-class="{selectedButton: IHC.checkInterest('crafts')}">crafts</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('movie-night');"
+                ng-class="{selectedButton: IHC.checkInterest('movie-night')}">movie night</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('board-games');"
+                ng-class="{selectedButton: IHC.checkInterest('board-games')}">playing board games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('card-games');"
+                ng-class="{selectedButton: IHC.checkInterest('card-games')}">playing card games</button>
     </div>
 </div>
 
