--- a/pages/age_range.html
+++ b/pages/age_range.html
@@ -10,6 +10,18 @@
         <button type="button" class="btn btn-default" aria-label="Left Align">60+</button>
     </div>
 
+    <h1>Text here: {{ arc.test }}</h1>
+
+    <article>
+        <h2>Range slider</h2>
+        Min Value:
+        <input type="number" ng-model="arc.minRangeSlider.minValue" />
+        <br/>Max Value:
+        <input type="number" ng-model="arc.minRangeSlider.maxValue" />
+        <br/>
+        <rzslider rz-slider-model="arc.minRangeSlider.minValue" rz-slider-high="arc.minRangeSlider.maxValue" rz-slider-options="arc.minRangeSlider.options"></rzslider>
+    </article>
+
     <div class="previous-next pull-right">
         <a href="#/user_age_range">
             <button type="button" class="btn btn-default chevronButton" aria-label="Left Align">
