--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -1,4 +1,4 @@
-<h1>on a night in we like<h1>
+<h1>on a night in we like</h1>
 
 <div class="interest-checkboxes">
     <div class="at-home groupings">
@@ -7,18 +7,18 @@
                 ng-class="{selectedButton: IHC.checkInterest('book-club')}">book
             club</button>
         <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('conversation');"
-                ng-class="{selectedButton: IHC.checkInterest('conversation')}">conversation (e.g. around the fire 
+                ng-class="{selectedButton: IHC.checkInterest('conversation')}">conversation (e.g. around the fire
             pit)</button>
         <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('cooking');"
-                ng-class="{selectedButton: IHC.checkInterest('cooking')}">cooking</button>
+                ng-class="{selectedButton: IHC.checkInterest('book-club')}">cooking</button>
         <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('crafts');"
                 ng-class="{selectedButton: IHC.checkInterest('crafts')}">crafts</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('movie-night');"
-                ng-class="{selectedButton: IHC.checkInterest('movie-night')}">movie night</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('board-games');"
-                ng-class="{selectedButton: IHC.checkInterest('board-games')}">playing board games</button>
-        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('card-games');"
-                ng-class="{selectedButton: IHC.checkInterest('card-games')}">playing card games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('movie night');"
+                ng-class="{selectedButton: IHC.checkInterest('movie night')}">movie night</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('playing board games');"
+                ng-class="{selectedButton: IHC.checkInterest('playing board games')}">playing board games</button>
+        <button type="button" class="btn btn-default" aria-label="Left Align" ng-click="IHC.toggleInterest('playing card games');"
+                ng-class="{selectedButton: IHC.checkInterest('playing card games')}">playing card games</button>
     </div>
 </div>
 
